# sandboxWM

./: .gitignore  Cargo.toml  README.md  README_EN.md  sandboxWM_concept.md  sandboxWM_concept_EN.md  test.rs  test.txt
config/: drawing.conf  gravity.conf  joints.conf  rendering.conf  sandboxWM.conf  session.conf  slicing.conf  softbody.conf  window.conf
src/: backend_drm.rs  config.rs  input.rs  main.rs  output_manager.rs  physics.rs  render.rs  screencopy.rs  state.rs  tiling.rs  xwm.rs
