[package]
name = "sandboxWM"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.33"
smithay = { version = "0.7", features = [
    "backend_winit",
    "renderer_gl",
    "desktop",
    "wayland-backend",
    "backend_drm",
    "backend_gbm",
    "backend_egl",
    "backend_libinput",
    "backend_udev",
    "backend_session_libseat",
    "use_system_lib",
    "renderer_gl",
] }
