[package]
name = "sandboxWM"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.33"
rapier2d = "0.34.0"
smithay = { version = "0.7", features = [
    "backend_winit",
    "renderer_gl",
    "desktop",
    "wayland-backend",
    "backend_drm",
    "backend_gbm",
    "backend_egl",
    "backend_libinput",
    "backend_udev",
    "backend_session_libseat",
    "xwayland",
    "use_system_lib",
    "renderer_gl",
] }
wayland-server = "0.31.2"
wayland-protocols-wlr = { version = "0.3.12", features = ["server"] }
cgmath = "0.18.0"
serde = { version = "1.0.229", features = ["derive"] }
toml = "1.1.3"
